Colaboratory를 통해 생성됨

--- a/EX_BS2_project2.ipynb
+++ b/EX_BS2_project2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1LU00l7wfi4Rf-64GvyFY85wZNrWXA-zW",
-      "authorship_tag": "ABX9TyNzju5rCsq4bWV32Fc1ljHu",
+      "authorship_tag": "ABX9TyN2nYA06ruJvUVGiwnFxqqc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1632,7 +1632,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- 머신러닝에 좀 더 편리하게 하기 위해 continous value인 temp를 categorical value로 변환해줌"
+        "- 머신러닝에 좀 더 편리하게 하기 위해 continous value인 temp를 categorical value로 변환해줌\n",
+        "\n"
       ],
       "metadata": {
         "id": "9o7T-i1Jyzu6"
@@ -2018,6 +2019,15 @@
       },
       "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- test 데이터에 대해서도 temp 값들을 카테고리화 시켜줌"
+      ],
+      "metadata": {
+        "id": "REZodgoLP7oq"
+      }
     },
     {
       "cell_type": "code",
