Colaboratory를 통해 생성됨

--- a/EX_BS2_project2.ipynb
+++ b/EX_BS2_project2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1LU00l7wfi4Rf-64GvyFY85wZNrWXA-zW",
-      "authorship_tag": "ABX9TyN2nYA06ruJvUVGiwnFxqqc",
+      "authorship_tag": "ABX9TyPU0Z1LHwp3czwGQ5PZ0n4O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "V8kO-hEcgykp"
       },
@@ -73,7 +73,7 @@
         "id": "gLNm1Ea4p-Si",
         "outputId": "763c9313-2843-46f0-8332-25c3784cdcd9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
         },
         "outputId": "664bd683-ee56-4434-e860-59f8fd3c6cf0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "id": "GlNmt7NWs9B8",
         "outputId": "0279f33f-6bbd-46fd-ba9b-eda1862e04c4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "9-8kz2nJtC_E",
         "outputId": "0790a607-5dd1-48e8-b434-723123b8c6b1"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "0HFwxCAZtoJ0",
         "outputId": "12657c14-f582-47db-fb7e-6f6b868dbf7c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "7iTwsKiTuMwo"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +290,7 @@
       "metadata": {
         "id": "MR0IxVJpu2pm"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -323,7 +323,7 @@
       "metadata": {
         "id": "4TmWqNvUwB1h"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "BjzTM4wexVoq"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +376,7 @@
         "id": "h1R_7qSOxbmz",
         "outputId": "51db143f-5ff9-46c9-d1db-b022d9204b86"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +501,7 @@
         "id": "Bd5NbMhyyoDJ",
         "outputId": "8e697c09-8297-42ca-eefa-30d5f5e336b6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -529,7 +529,7 @@
         },
         "outputId": "bdf13de1-73dd-42e4-f396-c7ad6bd7b07c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +574,7 @@
         },
         "outputId": "954585f9-cfb5-49af-d0d4-b6387ecdc12e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -612,7 +612,7 @@
         "id": "32mOEMq15nUW",
         "outputId": "8cd9b8b7-3580-456d-e55e-0060bf7c3820"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -660,7 +660,7 @@
       "metadata": {
         "id": "h2W3rsQfl2VK"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -676,7 +676,7 @@
         "id": "4ErwjYJXmmgC",
         "outputId": "d7ae5187-e972-4f40-df4a-0a8040f13686"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,7 +907,7 @@
         "id": "YJ7HaO2ompX7",
         "outputId": "b2173444-24bb-4d3d-f7b0-ab979971d6c0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +1119,7 @@
         "id": "RJLFuzoxongf",
         "outputId": "3e2a3e1d-8a31-46fb-9623-e2ce05f682c1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1179,7 @@
         },
         "outputId": "3a6a43ba-4217-4986-a4d0-3e66bcab119c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1482,7 +1482,7 @@
         },
         "outputId": "341b90f4-a683-4d7f-b9e7-55e50d48a633"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1524,7 +1524,7 @@
         "id": "ZuZbU1DW_ZVv",
         "outputId": "456d7c3d-f300-48d8-c9b2-cfff36cce5b4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1565,7 +1565,7 @@
         "id": "4C83Dc6ZAL9q",
         "outputId": "c3693a02-6e6e-4b1e-e7ad-5e78b6e1317e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1651,7 +1651,7 @@
       "metadata": {
         "id": "EdYexD8VB2kO"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1668,7 +1668,7 @@
         "id": "JF3qPAJ7Cvw_",
         "outputId": "b2a3c6af-9dea-44fb-ec8d-3251c8fc8f08"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1715,7 +1715,7 @@
         "id": "WbXruyKHGOMI",
         "outputId": "bbd7374e-9db7-4180-a4c4-3fc5ebb1d1f6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2005,7 +2005,7 @@
       "metadata": {
         "id": "c_2NQisnaioJ"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2017,7 +2017,7 @@
       "metadata": {
         "id": "DSUrTaOLJafy"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2041,7 +2041,7 @@
       "metadata": {
         "id": "pOP_BohqT1gM"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2066,7 +2066,7 @@
         "id": "mki5fIAEVmlv",
         "outputId": "93db45dd-3262-4a44-ff1f-3cd568a83e5e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2330,7 +2330,7 @@
       "metadata": {
         "id": "mIlD8jLFV1W2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2360,7 +2360,7 @@
       "metadata": {
         "id": "KegWou-LLImp"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2384,7 +2384,7 @@
       "metadata": {
         "id": "unn6z7QFl3cP"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2399,7 +2399,7 @@
         "id": "NjZmdD3bbgoe",
         "outputId": "5a456887-e867-4ab1-e6ca-2871e18a9978"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2442,7 +2442,7 @@
       "metadata": {
         "id": "ksLi_rXAl387"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2459,7 +2459,7 @@
         "id": "BVzMEP65aN6V",
         "outputId": "d683a0d0-fe24-42b9-abb2-bb517f3489c0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2493,7 +2493,7 @@
       "metadata": {
         "id": "MZUcfYD34IDM"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2515,7 +2515,7 @@
         },
         "outputId": "f8e9967b-28b7-4766-9da9-3462d667c86d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2549,7 +2549,9 @@
         "\n",
         "2. 자전거 타는 사람 수 예측\n",
         "  - 보통 지금까지 LMS나 캐글 필사에서 하던 titanic관련 캐글에서는 모델 학습을 위한 X_train, X_test 등을 나눌 때, sklearn의 train_test_split을 이용해해서 처음엔 그렇게 해봤다. 그랬더니 마지막 시각화 부분에서 y축 부분의 값이 count값이 나오는게 아니라 이상한 -16435 뭐 이런 값이 나와서 또 이건 아니다 싶어 train과 test를 합치고 거기서 다시 X_train과 X_test를 나누는 방법을 사용했더니 y축 값이 바르게 나왔다. 근데 또 신기한건 y값이 -16435 이렇게 나올때랑 그 뒤랑 그래프 모양은 똑같다는 거다....\n",
-        "  - 이번에도 손실 함수를 MSE, RMSE 뿐 아니라 R-squared함수를 이용하여 loss값을 구했다..R-squared에 미련이 남은 것 같다."
+        "  - 이번에도 손실 함수를 MSE, RMSE 뿐 아니라 R-squared함수를 이용하여 loss값을 구했다..R-squared에 미련이 남은 것 같다.\n",
+        "  \n",
+        "  - 그리고 아랫부분은 캐글 필사하면서 성능 향상하는 부분이었는데 위의 내용을 다 지우기가 아깝기도 해서 밑에 이어 붙이겠습니다... 양이 너무 많아 질 것 같긴 하지만...ㅎㅎ"
       ],
       "metadata": {
         "id": "su8JYJvX0E3p"
