Colaboratory를 통해 생성됨

--- a/EX_BS2_project9.ipynb
+++ b/EX_BS2_project9.ipynb
@@ -6,7 +6,7 @@
       "name": "EX_BS2_project9.ipynb",
       "provenance": [],
       "mount_file_id": "1UZVPDjPhUWD5tMNgiqGJjFYEnztI-eR6",
-      "authorship_tag": "ABX9TyPD+9wQ8pYyxd1QbdMjNSVZ",
+      "authorship_tag": "ABX9TyOy2+vRlExvxWjgnmsvyq3E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,37 +36,6 @@
       "metadata": {
         "id": "NXgFWVd786MU"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "id": "OMtjB6BTzn6T",
-        "outputId": "59f37cbd-26b7-459f-ee15-19840a5545d9"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'2.6.0'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
-      "source": [
-        "import tensorflow as tf\n",
-        "tf.__version__"
-      ]
     },
     {
       "cell_type": "code",
@@ -1438,6 +1407,29 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. 회고 & 문제해결 방법 \n",
+        "\n",
+        "- 문제해결 방법 생각\n",
+        "\n",
+        "먼저 문제가 생기는 이유를 추측해보면 고양이 이미지에서 segmentation을 할 때 이미지값을 기반으로 구분해서 문제가 생긴 것 같다. 아마도 뒤에있는 나뭇잎 색이랑 고양이 털 색깔이랑 비슷해서 그런 문제가 생긴 것 같은데 요즘 많이들 연구중인 ToF 기술을 이용해 사진에 각 물체들의 거리에 대한 정보도 넣고, 그 정보를 이용하면 segmentation이 좀 더 편리해질 것 같다. \n",
+        "\n",
+        "지금까지 카메라로 사진을 찍으면 3채널 데이터(R,G,B)로 저장을 했지만 이제 ToF를 이용해 사진을 찍으면 거기에 거리에 대한 정보를 함께 담아서 저장하는거다. 하지만 거리는 연속적인 값이기 때문에 어느정도 구간화를 하여 데이터로 기록을 해주면 될 것 같다. \n",
+        "\n",
+        "그렇게 된다면 이미지에서 픽셀값이 서로 비슷하거나 같다고 하더라고 둘의 거리가 다르면 다른 물체로 인식해 segmentation의 성능이 더 올라갈것같다.\n",
+        "\n",
+        "- 회고\n",
+        "\n",
+        "이번 익스는 내용도 내용이지만 처음 코랩 환경설정이 제일 난이도가 높았다... 패키지 버전에 따른 차이는 생각도 안해봤는데.. 처음에는 진짜 너무 열받았는데 역시 구글은 신이다. ㅋ_ㅋ 일단 내가 겪은 문제는 과거에 누군가가 무조건 한 번 이상은 겪은 문제이기 때문에 해결 방법이 없는 경우가 잘 없다. 뭐 영어로 돼있는게 문제라면 문제지만 그거야 천천히 읽어보면 되니까 ㅎㅎ 이래서 다들 정보의 바다~ 정보의 바다~ 하는가보다. \n",
+        "\n",
+        "여하튼, 익스를 진행 하면서 처음엔 단순하게 객체를 인식하고, 그걸 잘라내고 어디 붙여넣고 하는 과정이 신기하고 재밌었다. 근데 이제 마지막에 segmentation의 문제에 대한 해결방안을 찾으려고 3D이미지 센서에 대해서 보면서 언제까지 2D이미지랑 놀진 못하겠다는 생각이 들었다. 어서 빨리 나도 3D이미지 인식 분야에 조금이나마 이바지할 수 있도록 노력해야겠따."
+      ],
+      "metadata": {
+        "id": "amqwoYlVWVy-"
+      }
     }
   ]
 }
