Colaboratory를 통해 생성됨

--- a/11.DCGAN/EX_BS2_project11.ipynb
+++ b/11.DCGAN/EX_BS2_project11.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "12Z4WscgUPYt1JaHZq8hN-dPvKYVeEheW",
-      "authorship_tag": "ABX9TyNgqbPneU2QsFFOo3mX1aKE",
+      "authorship_tag": "ABX9TyO0Ypcwo3dW7E18ji6YdkG/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1187,11 +1187,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "![](https://github.com/RealMyeong/Aiffel_Exploration/blob/main/11.DCGAN/fourth.gif)"
       ],
       "metadata": {
         "id": "98IZZWb2Qfdj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "gnJ0bOjnGc2i"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
