Colaboratory를 통해 생성됨

--- a/EX_BS2_project11.ipynb
+++ b/EX_BS2_project11.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "12Z4WscgUPYt1JaHZq8hN-dPvKYVeEheW",
-      "authorship_tag": "ABX9TyPs6bjFLhqiwXOWjSs6b7f5",
+      "authorship_tag": "ABX9TyPvsj4CiFSslDNy23kp9Gxo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1214,24 +1214,28 @@
       "cell_type": "markdown",
       "source": [
         "## 결과 정리 및 마무리\n",
+        "---\n",
+        "LMS결과가 만족스럽게 나오지 않아서 gen, disc층을 추가하고, 파라미터를 바꿔가며 여러번 실행을 해봤지만 만족스러운 결과가 나온 부분만 기록했습니다.\n",
         "\n",
         "- Fake Images by DCGAN\n",
         "    - (LMS 결과) LMS 기본 코드로 나온 이미지는 형체가 없어서 무엇을 만들었는지 알 수 없음. \n",
-        "    - (개선1) epoch을 500으로 늘리고 앞서 저장한 checkpoint를 불러와서 이미지를 이어서 만들었음. 선명해지면서 형체가 보이기 시작. 그러나 fake accuracy 값이 떨어지지 않음. 학습 시간 총 1h 57min 20s 걸림\n",
-        "    - (개선2) checkpoint를 불러오지 않고 새로 이미지 생성. 여러 파라미터 값을 바꾸고 레이어 층을 더 쌓음. real image 를 토대로 제대로 된 fake image 를 얻음. real accuracy 와 fake accuracy 가 0.5 를 향해 하향하고 있음. 학습 시간 총 7h 3min 43s 걸림\n",
+        "    - (개선1) 층 추가, optimizer 파라미터 변경, 어느정도 형체가 보이기 시작하지만 정확히 무엇을 그리는지 애매함, real accuracy와 fake accuracy가 0.5를 향해 수렴하는 추세를 보임\n",
+        "    - (개선2) 바로 전 단계에서 disc층에도 Batch Normalize 적용\n",
+        "    - (개선3) disc에서의 Batch Normalize없애고 층 추가\n",
         "\n",
         "\n",
         "|-|Total Learning Time|Setting|\n",
         "|:---:|:---:|---|\n",
         "|**LMS 결과**|2773s|default|\n",
-        "|**개선1**|check x||\n",
-        "|**개선2**|6h 55min 42s||\n",
+        "|**개선1**|check x|Adam_LR(2e-04), disc_kernel(3,3), Leaky(alpha=0.2), dropout=0.5, generator : 첫 시작 커널(4,4) stride(1,1)|\n",
+        "|**개선2**|\bcheck x|disc층에 BatchNormalize 적용|\n",
+        "|**개선3**|6h 55min 42s|Adam_LR(2e-04, beta1=0.5), disc_Dense(activation=sigmoid), generator(activation=ReLU), 층 추가|\n",
         "\n",
         "\n",
-        "|-|LMS 결과|개선1|개선2|\n",
+        "|-|개선1|개선2|개선3|\n",
         "|:---:|:---:|:---:|:---:|\n",
-        "|**Image GIF**|![](11.DCGAN/history_gif)|![](dcgan_newimage/cifar10/gif/cifar10_dcgan_2.gif)|![](dcgan_newimage/cifar10/gif/cifar10_dcgan_3.gif)|\n",
-        "|**History GIF**|![](11.DCGAN/history_gif/fourth_history_2.gif)|![](dcgan_newimage/cifar10/gif/cifar10_dcgan_history_2.gif)|![](dcgan_newimage/cifar10/gif/cifar10_dcgan_history_3.gif)|"
+        "|**Image GIF**|![](11.DCGAN/gif/fourth.gif)|![](11.DCGAN/gif/fifth.gif)|![](11.DCGAN/gif/eighth.gif)|\n",
+        "|**History GIF**|![](11.DCGAN/history_gif/fourth_history_2.gif)|![](11.DCGAN/history_gif/fifth_history.gif)|![](11.DCGAN/history_gif/eighth_history.gif)|"
       ],
       "metadata": {
         "id": "okDiq0k6oyml"
