Colaboratory를 통해 생성됨

--- a/EX_BS2_project11.ipynb
+++ b/EX_BS2_project11.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "12Z4WscgUPYt1JaHZq8hN-dPvKYVeEheW",
-      "authorship_tag": "ABX9TyPvsj4CiFSslDNy23kp9Gxo",
+      "authorship_tag": "ABX9TyMt05Pt7TrN/lkZoSymvRaS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1235,7 +1235,18 @@
         "|-|개선1|개선2|개선3|\n",
         "|:---:|:---:|:---:|:---:|\n",
         "|**Image GIF**|![](11.DCGAN/gif/fourth.gif)|![](11.DCGAN/gif/fifth.gif)|![](11.DCGAN/gif/eighth.gif)|\n",
-        "|**History GIF**|![](11.DCGAN/history_gif/fourth_history_2.gif)|![](11.DCGAN/history_gif/fifth_history.gif)|![](11.DCGAN/history_gif/eighth_history.gif)|"
+        "|**History GIF**|![](11.DCGAN/history_gif/fourth_history_2.gif)|![](11.DCGAN/history_gif/fifth_history.gif)|![](11.DCGAN/history_gif/eighth_history.gif)|\n",
+        "\n",
+        "\n",
+        "---\n",
+        "회고\n",
+        "---\n",
+        "\n",
+        "초반 시도에서는 fake accuracy가 0.5로 수렴해야한다는 생각에 판별자를 애초에 멍청하게 만들면 구분을 잘 못하니까 0.5로 가지 않을까? 하는 생각에 생성자 모델에만 층을 추가하고 판별자는 대충 만들었다. 그러다보니 실제로 accuracy가 0.5로 가긴 했지만 수렴한다기보다 그냥 시작부터 0.5에서 머물고 생성되는 이미지도 크게 개선되지않았다. 아마 판별자가 너무 멍청해서 초반에 생성해내는 그림조차 진짜랑 헷갈리기 때문이라 생각했다.\n",
+        "\n",
+        "그래서 후반부 시도에서는 생성자보다 판별자를 더 똑똑하게 만들어야 한다고 생각했고, 실제로 판별자를 만드는것에 집중했다. 판별자가 똑똑해야 생성한 이미지에 잘 속지 않을거고 그래야 생성자가 학습을 해서 점점 진짜같은 이미지를 생성할거라 생각했기 때문이다. 그래서 disc층을 7층까지 늘렸고 200epoch을 돌렸을 때 약 100epoch까지는 0.5로 조금씩 수렴하는 추세를 볼 수 있었다. 그리고 이미지도 이 전의 시도들보다 좀 더 형체를 알아볼 수 있게 변했다. \n",
+        "\n",
+        "초반 시도에서 평가 기준에만 집중하여 제일 중요한 부분을 놓치고 진행했던게 아쉽다. 앞으로는 평가 기준보다 모델의 작동 원리를 이해하고 그에따른 성능향상을 꾀해야겠다."
       ],
       "metadata": {
         "id": "okDiq0k6oyml"
