Colaboratory를 통해 생성됨

--- a/16_Pix2Pix/EX_BS2_project16.ipynb
+++ b/16_Pix2Pix/EX_BS2_project16.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1v4dZpcxnEm4SB3rv6JYyBACXDnyb8CRY",
-      "authorship_tag": "ABX9TyNjx3i9SSC8eoRank4PmtdZ",
+      "authorship_tag": "ABX9TyNGjrJPPYT+Kv8rQ9DR5XcZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2393,6 +2393,18 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "결과 정리\n",
+        "---\n",
+        "\n",
+        "![]('/result_imgs/second_result.jpeg')"
+      ],
+      "metadata": {
+        "id": "F9T8njpnLiKF"
+      }
     }
   ]
 }
