Colaboratory를 통해 생성됨

--- a/16_Pix2Pix/EX_BS2_project16.ipynb
+++ b/16_Pix2Pix/EX_BS2_project16.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1v4dZpcxnEm4SB3rv6JYyBACXDnyb8CRY",
-      "authorship_tag": "ABX9TyNGjrJPPYT+Kv8rQ9DR5XcZ",
+      "authorship_tag": "ABX9TyNm17djrfD49gLagpF/q2v6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2400,7 +2400,7 @@
         "결과 정리\n",
         "---\n",
         "\n",
-        "![]('/result_imgs/second_result.jpeg')"
+        "![](16_Pix2Pix/result_imgs/second_result.jpeg)"
       ],
       "metadata": {
         "id": "F9T8njpnLiKF"
