Colaboratory를 통해 생성됨

--- a/EX_BS2_project16.ipynb
+++ b/EX_BS2_project16.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1v4dZpcxnEm4SB3rv6JYyBACXDnyb8CRY",
-      "authorship_tag": "ABX9TyO5BpDinrtDZxszOxm86jrw",
+      "authorship_tag": "ABX9TyMg9+N5tGTT1XN6pZ2gHcvu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2400,9 +2400,11 @@
         "결과 정리\n",
         "---\n",
         "\n",
-        "|결과|\n",
-        "|:---:|\n",
-        "|![](16_Pix2Pix/result_imgs/second_result.jpeg)|"
+        "|---| 결과 이미지| Loss | \n",
+        "|:---:|:---:|:---:|\n",
+        "| 첫 시도|![](16_Pix2Pix/result_imgs/second_result.jpeg) | |\n",
+        "| 두 번째 |![](16_Pix2Pix/result_imgs/third_result.jpeg) |![](16_Pix2Pix/result_imgs/third_result_loss.jpeg) |\n",
+        "| 세 번째 | | |\n"
       ],
       "metadata": {
         "id": "F9T8njpnLiKF"
