Colaboratory를 통해 생성됨

--- a/EX_BS2_project16.ipynb
+++ b/EX_BS2_project16.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "mount_file_id": "1v4dZpcxnEm4SB3rv6JYyBACXDnyb8CRY",
-      "authorship_tag": "ABX9TyPT4rVEZMOTPb8Kk564o4E0",
+      "authorship_tag": "ABX9TyOmZPPy1V1UBs+ems4YEJu0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4397,7 +4397,12 @@
     {
       "cell_type": "markdown",
       "source": [
+        "- 제일 첫 생성 이미지\n",
         "\n",
+        "![](16_Pix2Pix/result_imgs/first_10_epoch.png)\n",
+        "\n",
+        "\n",
+        "- 성능 향상 \n",
         "\n",
         "모델 스펙\n",
         "---\n",
